Fix button alignment issue landing page

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-    background-image: url("https://i.ibb.co/B3sS411/sushi.png");
+    /* background-image: url("https://i.ibb.co/B3sS411/sushi.png"); */
     background-repeat: no-repeat;
     background-position: auto;
     min-width: 375px;
@@ -18,7 +18,7 @@ body {
     background-position: absolute;
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: black;
     color: white;
 }
 
@@ -50,13 +50,16 @@ h1 {
 a:visited {
     background: #525252;
     color: white;
-    padding: 40px 50px;
+    margin: auto;
+    text-align: center;
+    border: 2px solid white;
+    padding: 15px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    border-radius: 20px;
-    width: 200px;
-    height: 120px;
+    border-radius: .6em;
+    width: 70%;
+    height: 60px;
 }
 
 .cards p {}
@@ -76,25 +79,22 @@ a:visited {
 
 .maki {
     width: 300px;
-    padding: 50px;
-    margin: 0 auto;
-    margin: 2rem 2rem;
+    padding: 1em;
 }
 
 .sashimi {
     width: 300px;
-    padding: 50px;
-    margin: 0 auto;
-    margin: 2rem 2rem;
+    padding: 1em;
 }
 
-.nigiri {}
+.nigiri {
+    width: 300px;
+    padding: 1em;
+}
 
 .american {
     width: 300px;
-    padding: 50px;
-    margin: 0 auto;
-    margin: 2rem 2rem;
+    padding: 1em;
 }
 
 header {
@@ -186,15 +186,15 @@ h3 {
 }
 
 .how-to-maki a {
-    background: grey;
-    color: white;
+    display: block;
+    background: white;
+    color: #69646e;
     padding: 5px 30px;
     text-align: center;
     text-decoration: none;
-    display: block;
     border-radius: 15px;
     margin: 2em auto;
-    width: 20%;
+    width: 40%;
     height: 30px;
 }
 
